; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_snoc.c_ath10k_snoc_write32.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_snoc.c_ath10k_snoc_write32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath10k = type { i32 }
%struct.ath10k_snoc = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ath10k*, i64, i64)* @ath10k_snoc_write32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ath10k_snoc_write32(%struct.ath10k* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.ath10k*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.ath10k_snoc*, align 8
  store %struct.ath10k* %0, %struct.ath10k** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct.ath10k*, %struct.ath10k** %4, align 8
  %9 = call %struct.ath10k_snoc* @ath10k_snoc_priv(%struct.ath10k* %8)
  store %struct.ath10k_snoc* %9, %struct.ath10k_snoc** %7, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load %struct.ath10k_snoc*, %struct.ath10k_snoc** %7, align 8
  %12 = getelementptr inbounds %struct.ath10k_snoc, %struct.ath10k_snoc* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* %5, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @iowrite32(i64 %10, i64 %15)
  ret void
}

declare dso_local %struct.ath10k_snoc* @ath10k_snoc_priv(%struct.ath10k*) #1

declare dso_local i32 @iowrite32(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
